--- a/css/BooksCorner.css
+++ b/css/BooksCorner.css
@@ -228,12 +228,24 @@ ul {
 
 /* End Components */
 /* responsive */
+/* smallest */
+@media (max-width:575px) {
+    .container {
+        width: 100%;
+    }
+}
+
+@media (min-width:576px) {
+    .container {
+        width: 540px;
+    }
+}
 
 /* small */
 
 @media (min-width:768px) {
     .container {
-        width: 750px;
+        width: 720px;
     }
 }
 
@@ -241,7 +253,7 @@ ul {
 
 @media (min-width:992px) {
     .container {
-        width: 970px;
+        width: 960px;
     }
 }
 
@@ -249,7 +261,7 @@ ul {
 
 @media (min-width:1200px) {
     .container {
-        width: 1170px;
+        width: 1140px;
     }
 }
 
